--- a/Rock Paper Scissors/Rock Paper Scissors/Base.lproj/Main.storyboard
+++ b/Rock Paper Scissors/Rock Paper Scissors/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdO-Gn-uqJ">
-                                <rect key="frame" x="168.5" y="296" width="77" height="98"/>
+                                <rect key="frame" x="168.66666666666666" y="399" width="77" height="98"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="72"/>
                                 <state key="normal" title="🤚🏼"/>
                                 <connections>
@@ -27,7 +27,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="left" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WaX-cj-bR2">
-                                <rect key="frame" x="20" y="296" width="77" height="98"/>
+                                <rect key="frame" x="20" y="399" width="77" height="98"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="72"/>
                                 <state key="normal" title="✊🏼"/>
                                 <connections>
@@ -35,7 +35,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="right" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2cf-ut-yeL">
-                                <rect key="frame" x="317" y="296" width="77" height="98"/>
+                                <rect key="frame" x="317" y="399" width="77" height="98"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="72"/>
                                 <state key="normal" title="✌🏼"/>
                                 <connections>
@@ -43,7 +43,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose one" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SKt-QD-1yt">
-                                <rect key="frame" x="20" y="144" width="374" height="36"/>
+                                <rect key="frame" x="129.66666666666666" y="230" width="154.99999999999997" height="36"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                 </accessibility>
@@ -52,7 +52,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 : 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hac-O9-xK7">
-                                <rect key="frame" x="177.5" y="220" width="59" height="36"/>
+                                <rect key="frame" x="177.66666666666666" y="323" width="59" height="36"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                 </accessibility>
@@ -61,19 +61,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🤖" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qel-pv-eKg">
-                                <rect key="frame" x="317" y="195" width="77" height="86"/>
+                                <rect key="frame" x="317" y="298" width="77" height="86"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="72"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👱🏼‍♂️" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UFT-YP-nJv">
-                                <rect key="frame" x="20" y="195" width="77" height="86"/>
+                                <rect key="frame" x="20" y="298" width="77" height="86"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="72"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lrn-Vo-s1o">
-                                <rect key="frame" x="147" y="494" width="120" height="42"/>
+                                <rect key="frame" x="147" y="627" width="120" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="New Game"/>
                                 <connections>
@@ -85,20 +85,19 @@
                         <constraints>
                             <constraint firstItem="2cf-ut-yeL" firstAttribute="top" secondItem="qel-pv-eKg" secondAttribute="bottom" constant="15" id="2t0-XU-RMp"/>
                             <constraint firstItem="hdO-Gn-uqJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3Hg-n7-EsM"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SKt-QD-1yt" secondAttribute="trailing" constant="20" id="8DY-b7-XL7"/>
-                            <constraint firstItem="Lrn-Vo-s1o" firstAttribute="top" secondItem="hdO-Gn-uqJ" secondAttribute="bottom" constant="100" id="8e6-wp-8Hh"/>
+                            <constraint firstItem="hdO-Gn-uqJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="4Sp-32-JOR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qel-pv-eKg" secondAttribute="trailing" constant="20" id="AeX-ch-YyF"/>
-                            <constraint firstItem="SKt-QD-1yt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="M4K-Xm-fjs"/>
+                            <constraint firstItem="2cf-ut-yeL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="DK2-cb-n8d"/>
                             <constraint firstItem="UFT-YP-nJv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Q8p-Ud-5A4"/>
                             <constraint firstItem="WaX-cj-bR2" firstAttribute="top" secondItem="UFT-YP-nJv" secondAttribute="bottom" constant="15" id="V8l-qt-Y1S"/>
                             <constraint firstItem="hac-O9-xK7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VFq-bA-Z7Z"/>
-                            <constraint firstItem="SKt-QD-1yt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="VYw-lZ-XUs"/>
+                            <constraint firstItem="Lrn-Vo-s1o" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="200" id="Vcp-Gd-bOb"/>
+                            <constraint firstItem="SKt-QD-1yt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="g24-AC-IfL"/>
+                            <constraint firstItem="WaX-cj-bR2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="hcJ-5i-ouW"/>
                             <constraint firstItem="Lrn-Vo-s1o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jek-1R-Df9"/>
-                            <constraint firstItem="qel-pv-eKg" firstAttribute="top" secondItem="SKt-QD-1yt" secondAttribute="bottom" constant="15" id="jui-oh-YPP"/>
                             <constraint firstItem="hdO-Gn-uqJ" firstAttribute="top" secondItem="hac-O9-xK7" secondAttribute="bottom" constant="40" id="kOa-Cm-I7x"/>
-                            <constraint firstItem="UFT-YP-nJv" firstAttribute="top" secondItem="SKt-QD-1yt" secondAttribute="bottom" constant="15" id="nIr-uy-lmI"/>
+                            <constraint firstItem="SKt-QD-1yt" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-200" id="rnn-qD-qtF"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2cf-ut-yeL" secondAttribute="trailing" constant="20" id="t2H-XA-jqx"/>
-                            <constraint firstItem="hac-O9-xK7" firstAttribute="top" secondItem="SKt-QD-1yt" secondAttribute="bottom" constant="40" id="vZZ-R5-XLC"/>
                             <constraint firstItem="WaX-cj-bR2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="w3T-Xr-Ga1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
