--- a/Rock Paper Scissors/Rock Paper Scissors/Base.lproj/Main.storyboard
+++ b/Rock Paper Scissors/Rock Paper Scissors/Base.lproj/Main.storyboard
@@ -86,12 +86,14 @@
                             <constraint firstItem="2cf-ut-yeL" firstAttribute="top" secondItem="qel-pv-eKg" secondAttribute="bottom" constant="15" id="2t0-XU-RMp"/>
                             <constraint firstItem="hdO-Gn-uqJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3Hg-n7-EsM"/>
                             <constraint firstItem="hdO-Gn-uqJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="4Sp-32-JOR"/>
+                            <constraint firstItem="qel-pv-eKg" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-107" id="9bj-MT-7zf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qel-pv-eKg" secondAttribute="trailing" constant="20" id="AeX-ch-YyF"/>
                             <constraint firstItem="2cf-ut-yeL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="DK2-cb-n8d"/>
                             <constraint firstItem="UFT-YP-nJv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Q8p-Ud-5A4"/>
                             <constraint firstItem="WaX-cj-bR2" firstAttribute="top" secondItem="UFT-YP-nJv" secondAttribute="bottom" constant="15" id="V8l-qt-Y1S"/>
                             <constraint firstItem="hac-O9-xK7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VFq-bA-Z7Z"/>
                             <constraint firstItem="Lrn-Vo-s1o" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="200" id="Vcp-Gd-bOb"/>
+                            <constraint firstItem="UFT-YP-nJv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-107" id="W3V-Tt-8kx"/>
                             <constraint firstItem="SKt-QD-1yt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="g24-AC-IfL"/>
                             <constraint firstItem="WaX-cj-bR2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="hcJ-5i-ouW"/>
                             <constraint firstItem="Lrn-Vo-s1o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jek-1R-Df9"/>
